chase up remaining references

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -669,3 +669,67 @@
   doi      = "10.1371/journal.pcbi.1008651",
   pmc      = "PMC8830797"
 }
+
+@ARTICLE{Karlen2020-pt,
+  title    = "Characterizing the spread of {CoViD-19}",
+  author   = "Karlen, D",
+  year     =  2020,
+  language = "en",
+  arxivid  = "2007.07156"
+}
+
+@ARTICLE{Castro2021-lj,
+  title         = "{COFFEE}: {COVID-19} Forecasts using Fast Evaluations and
+                   Estimation",
+  author        = "Castro, Lauren and Fairchild, Geoffrey and Michaud, Isaac
+                   and Osthus, Dave",
+  month         =  oct,
+  year          =  2021,
+  archivePrefix = "arXiv",
+  eprint        = "2110.01546",
+  primaryClass  = "stat.ME",
+  arxivid       = "2110.01546"
+}
+
+@ARTICLE{Srivastava2020-qv,
+  title         = "Fast and Accurate Forecasting of {COVID-19} Deaths Using the
+                   {SIkJ$\alpha$} Model",
+  author        = "Srivastava, Ajitesh and Xu, Tianjian and Prasanna, Viktor K",
+  month         =  jul,
+  year          =  2020,
+  archivePrefix = "arXiv",
+  eprint        = "2007.05180",
+  primaryClass  = "q-bio.PE",
+  arxivid       = "2007.05180"
+}
+
+@UNPUBLISHED{Li2021-cj,
+  title    = "Forecasting {COVID-19} and Analyzing the Effect of Government
+              Interventions",
+  author   = "Li, Michael Lingzhi and Bouardi, Hamza Tazi and Lami, Omar Skali
+              and Trikalinos, Thomas A and Trichakis, Nikolaos K and Bertsimas,
+              Dimitris",
+  journal  = "medRxiv",
+  pages    = "2020.06.23.20138693",
+  month    =  jun,
+  year     =  2021,
+  language = "en",
+  doi      = "10.1101/2020.06.23.20138693"
+}
+
+@ARTICLE{Rakowski2010-jn,
+  title    = "Influenza epidemic spread simulation for Poland --- a large
+              scale, individual based model study",
+  author   = "Rakowski, Franciszek and Gruziel, Magdalena and
+              Bieniasz-Krzywiec, {\L}ukasz and Radomski, Jan P",
+  journal  = "Physica A: Statistical Mechanics and its Applications",
+  volume   =  389,
+  number   =  16,
+  pages    = "3149--3165",
+  month    =  aug,
+  year     =  2010,
+  keywords = "Agent based model; Social network; Transportation model; Disease
+              spread model",
+  issn     = "0378-4371",
+  doi      = "10.1016/j.physa.2010.04.029"
+}
