--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -26,7 +26,7 @@ abstract: >
 bibliography: library.bib
 output:
   bookdown::pdf_book:
-    base_format: rticles::peerj_article
+    base_format: rticles::arxiv_article
     extra_dependencies: ["float"]
 ---
 
@@ -249,6 +249,15 @@ forecast_dates_by_models <- metadata |>
 
 ### Motivation {-}
 
+```{r}
+observations <- data.table(
+  No. = ,
+  Observation = c(
+    "Robust to daily reporting artefacts",
+
+  )
+)
+```
 To understand the behaviour of the Forecast Hub ensembles we need to first explore the structure of the COVID-19 Forecast Hubs [@Cramer2022-sp; @Bracher2021-wk; @Sherratt2022-ue].
 These collaborations share a similar design with a central team running the hub, vetting forecasts, and producing the ensemble forecast as well as teams of independent forecast contributors who design their forecast models and then use them to produce a weekly forecast that they then submit to the central hub team. 
 Each hub targets a range of metrics including test-positive reported cases, reported deaths, and hospitalisations has a specific geographic focus and asks for weekly forecasts (using epidemiological weeks i.e. Sunday to Saturday) over a time horizon of a few weeks.
