more changes + comments from @sbfnk

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -733,3 +733,33 @@
   issn     = "0378-4371",
   doi      = "10.1016/j.physa.2010.04.029"
 }
+
+@ARTICLE{Meakin2022-hw,
+  title    = "Comparative assessment of methods for short-term forecasts of
+              {COVID-19} hospital admissions in England at the local level",
+  author   = "Meakin, Sophie and Abbott, Sam and Bosse, Nikos and Munday, James
+              and Gruson, Hugo and Hellewell, Joel and Sherratt, Katharine and
+              {CMMID COVID-19 Working Group} and Funk, Sebastian",
+  journal  = "BMC Med.",
+  volume   =  20,
+  number   =  1,
+  pages    = "86",
+  month    =  feb,
+  year     =  2022,
+  keywords = "COVID-19; Ensemble; Forecasting; Healthcare demand; Infectious
+              disease; Outbreak; Real-time",
+  language = "en",
+  issn     = "1741-7015",
+  pmid     = "35184736",
+  doi      = "10.1186/s12916-022-02271-x",
+  pmc      = "PMC8858706"
+}
+
+@MISC{Abbott2021-ly,
+  title  = "Real-time estimation of the time-varying transmission advantage of
+            Omicron in England using {S-Gene} Target Status as a Proxy",
+  author = "Abbott, Sam and Sherratt, Katharine and Funk, Sebastian",
+  month  =  dec,
+  year   =  2021,
+  doi    = "10.5281/zenodo.5812298"
+}
