tidy up references

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -1,7 +1,7 @@
 @Misc{EuroHub,
-  author       = {European COVID-19 Forecast Hub},
+  author       = {European COVID-19 Forecast Hub Team},
   howpublished = {\url{https://covid19forecasthub.eu/}},
-  title        = {Forecasts of new cases and deaths due to Covid-19 over the next four weeks in countries across Europe and the UK.},
+  title        = {Forecasts of new cases and deaths due to Covid-19 over the next four weeks in countries across Europe and the UK},
   year         = {2021},
 }
 
@@ -122,14 +122,17 @@
 @MISC{europeanforecasthubcommunity,
   title        = "Community",
   howpublished = "\url{https://covid19forecasthub.eu/community.html}",
-  note         = "Accessed: 2022-9-21"
+  note         = "Accessed: 2022-9-21",
+  author       = {European COVID-19 Forecast Hub Team},
+  year = {2022}
 }
 
 @MISC{GitHubActionsAbout,
   title        = "About {GitHub-hosted} runners",
   howpublished = "\url{https://ghdocs-prod.azurewebsites.net/en/actions/using-github-hosted-runners/about-github-hosted-runners}",
   note         = "Accessed: 2022-9-21",
-  language     = "en"
+  language     = "en",
+  year = {2022}
 }
 
 @MISC{GitHubActionsLargeRunners,
@@ -137,7 +140,7 @@
   booktitle    = "The {GitHub} Blog",
   publisher    = "GitHub",
   month        =  sep,
-  year         =  2022,
+  year         =  {2022},
   howpublished = "\url{https://github.blog/changelog/2022-09-01-github-actions-larger-runners-are-now-in-public-beta/}",
   note         = "Accessed: 2022-9-21",
   language     = "en"
@@ -147,7 +150,8 @@
   title        = "Pricing - Linux Virtual Machines",
   howpublished = "\url{https://azure.microsoft.com/en-gb/pricing/details/virtual-machines/linux/}",
   note         = "Accessed: 2022-9-21",
-  language     = "en"
+  language     = "en",
+  year = {2022}
 }
 
 @ARTICLE{Bosse2022-hm,
@@ -184,7 +188,10 @@
 
 @MISC{EuroHubGitHub,
   title       = "covid19-forecast-hub-europe: European Covid-19 Forecast Hub",
-  institution = "Github",
+  publisher = "Github",
+  year = 2022,
+  author       = {European COVID-19 Forecast Hub Team},
+  howpublished = "\url{https://github.com/covid19-forecast-hub-europe/covid19-forecast-hub-europe}",
   language    = "en"
 }
 
@@ -540,7 +547,6 @@
   doi      = "10.1371/journal.pcbi.1006785",
   pmc      = "PMC6386417"
 }
-
 
 @ARTICLE{Charles2022-ds,
   title         = "{Seq2Seq} surrogates of epidemic models to facilitate
