--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -274,7 +274,7 @@ Unlike our epidemiologically motivated forecast submissions, the hub ensemble fo
 They also demonstrated some ability to forecast future changes in trends that were not present in the observed data similarly to our human insight forecasts indicating the likely inclusion of either human insight, or assumptions about future interventions. 
 In comparison to our submitted forecasts, the ensemble forecasts were less reactive to changes in trend such as from stable or reducing case incidence to increasing incidence.
 On the other hand, this also meant that the ensemble was less likely to adopt short-term changes in incidence and hence produced better long-term forecasts.
-Finally, the ensemble forecast tended to produce sharper forecasts and have a tendency toward under vs over predicting.
+Finally, the ensemble forecast tended to produce sharper forecasts and have a tendency toward under vs over predicting. Our observations are summarised in Table \@ref(tab:observations).
 
 ```{r observations}
 observations <- data.table(
@@ -300,7 +300,7 @@ observations |>
 
 ### Assumptions and simplifications {-}
 
-Based on these observations (summarised in Table \@ref(tab:observations)), here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model-based forecasting [@Bosse2022-hm] to produce an ensemble-like performance without sacrificing interpretability and with a lower cost.
+Based on our observations of forecast performance (summarised in Table \@ref(tab:observations)), here we define a model with similar, but simplified, epidemiological characteristics to our previous approaches to model-based forecasting [@Bosse2022-hm] to produce an ensemble-like performance without sacrificing interpretability and with a lower cost to produce.
 The first simplification we make is to model only weekly data, rather than using daily data and then aggregating.
 This mitigates the impact of daily reporting artefacts.
 It also serves to increase the auto-correlation of the forecasting model as there is an increased lag before changes in daily observations gain significant weight in the model.
@@ -318,7 +318,7 @@ This reflects a simplified interpretation of how the ensemble appears to react t
 
 The only observation for which we do not make an adaptation is the apparent sharpness of the ensemble compared to our prior forecasting models choosing instead to make use of a negative binomial observation model allowing the inclusion of overdispersion.
 This choice is motivated by our belief that the underlying transmission process is an exponential discrete one and therefore a count error model with a log link function, where variance is linked to the mean, is a sensible choice. 
-We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the use of a generalised form of absolute error for the majority of forecast evaluations [@bracherEvaluatingEpidemicForecasts2021]. Our set of assumptions and simplifications are summarised in Table \@ref(tab:observations).
+We suggest that part of the reason the hub ensembles exhibit this behaviour is due to the penalisation of overprediction compared to underprediction caused by the use of a generalised form of absolute error for the majority of forecast evaluations [@bracherEvaluatingEpidemicForecasts2021]. Our set of assumptions and simplifications are summarised in Table \@ref(tab:assumptions).
 
 ```{r assumptions}
 assumptions <- data.table(
@@ -326,7 +326,7 @@ assumptions <- data.table(
     "Reported cases can be modelled using weekly data and a generative process discretised by week", # nolint
     "Reported cases can be modelled as if they represented infections",
     "The growth rate of infections can be represented as an auto-regressive process with an order of 1 week", # nolint
-    "Unobserved interventions and more general changes in transmission towards a stable state can be represented using a multiplicative decay parameter" # nolint
+    "Unobserved interventions and more general changes in transmission towards a stable state can be represented \n using a multiplicative decay parameter" # nolint
   ),
   Observation = c("1, and 2", "-", "3 and 4", "2, and 5")
 )
@@ -534,7 +534,7 @@ Data anomalies were not randomly distributed with some locations being particula
 Anomalies were also not evenly distributed over time with a higher proportion occurring earlier in the study period (potentially due to our choice to extract data from the 1st of September which effectively truncated anomalies).
 `r per_excluded`% of forecasts were excluded across all horizons due to anomalies in the observed data. Aggregated across horizons `r exclusions$per`% of forecasts included at least one week with anomalous data. 
 
-```{r vis-forecasts, fig.cap = "a.) Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom, by forecast horizon (one and four weeks) for the surrogate model (orange) and forecast ensemble (green). 30\\%, 60\\%, and 90\\% prediction intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time. b.) A replicate of a.) but with incidence rates on the log scale. c.) Weighted interval scores at the one-week and four-week forecast horizon by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom on the log scale.", out.width = "95%", fig.height = 8, fig.width = 10}
+```{r vis-forecasts, fig.cap = "a.) Forecasts of notified test positive cases (per 10,000 population) by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom, by forecast horizon (one and four weeks) for the surrogate model (orange) and forecast ensemble (green). 30\\%, 60\\%, and 90\\% prediction intervals are shown. The black line and points are the notified cases as of the date of data extraction rather than those available at the time. b.) A replicate of a.) but with incidence rates on the log scale. c.) Weighted interval scores at the one-week and four-week forecast horizon by epidemiological week in Germany, Greece, Italy, Poland, Slovakia, and the United Kingdom on the log scale.", out.width = "98%", fig.height = 8, fig.width = 12}
 p <- (
   plot_forecast_custom(forecasts, log = FALSE) |
   plot_forecast_custom(forecasts, log = TRUE) +
@@ -617,7 +617,7 @@ plot_rwis_by_month <- relative_wis |>
   guides(fill = guide_none())
 ```
 
-```{r assemble-eval, fig.height = 8, fig.width = 8, out.width = "95%", fig.cap = "Relative weighted interval score by location, horizon, and forecast date for the surrogate forecast model compared to the ensemble forecast model on the log scale. a.) The density of the relative score by horizon. Horizontal black lines give the 5\\%, 35\\%, 65\\%, and 95\\% quantiles. b.) The density of the relative score by month for a given forecast horizon stratified by the one and four-week forecast horizon. c.) The average relative weighted interval score and absolute error for the surrogate model compared to the ensemble forecast by forecast horizon. d.) The density of the relative score by forecast location stratified by the one and four-week forecast horizon. The dashed line on all plots indicates when the ensemble forecast is equivalent to the surrogate forecast. The vertical black lines on the y-axis give individual relative scores."}
+```{r assemble-eval, fig.height = 8, fig.width = 8, out.width = "98%", fig.cap = "Relative weighted interval score by location, horizon, and forecast date for the surrogate forecast model compared to the ensemble forecast model on the log scale. a.) The density of the relative score by horizon. Horizontal black lines give the 5\\%, 35\\%, 65\\%, and 95\\% quantiles. b.) The density of the relative score by month for a given forecast horizon stratified by the one and four-week forecast horizon. c.) The average relative weighted interval score and absolute error for the surrogate model compared to the ensemble forecast by forecast horizon. d.) The density of the relative score by forecast location stratified by the one and four-week forecast horizon. The dashed line on all plots indicates when the ensemble forecast is equivalent to the surrogate forecast. The vertical black lines on the y-axis give individual relative scores."}
 p <- (
   (
     (
@@ -638,7 +638,7 @@ p <- (
   plot_annotation(tag_levels = "a") &
   theme(
     legend.position = "bottom", legend.margin = margin(),
-    legend.justification = "centre", legend.direction = "vertical"
+    legend.justification = "centre", legend.box = "vertical"
   )
 suppressWarnings(print(p))
 ```
@@ -663,11 +663,14 @@ This is true across forecast horizons but the magnitude of the difference increa
 Calculating the bias of the forecasts from each model we see that the (Figure \@ref(fig:plot-coverage) d) ensemble forecast is initially biased towards underprediction but this bias reduces as the forecast horizon increases.
 In comparison, the surrogate forecast model is biased towards overprediction for all forecast horizons with the magnitude of this bias appearing to increase linearly with the forecast horizon.
 
-```{r plot-coverage, fig.height = 8, fig.width = 8, out.width = "95%", fig.cap = "a.) Empirical coverage of the surrogate (orange) and ensemble (green) forecasts at the 90\\%, 60\\%, and 30\\% prediction intervals stratified by forecast horizon. Ideally, a well-calibrated forecast should have empirical coverage for a given prediction interval that equals the nominal level of the interval (i.e., 30\\%, 60\\% and 90\\%, respectively). b.) Empirical coverage by quantile for both the surrogate and ensemble forecasts. A well-calibrated forecast should have empirical quantiles that match the theoretical ones. The green area of this figure corresponds to conservative forecasts. c.) Median relative weighted interval score by quantile and forecast horizon for the surrogate forecast compared to the ensemble forecast. d.) Bias of the ensemble and surrogate forecasts stratified by horizon."}
+```{r plot-coverage, fig.height = 8, fig.width = 8, out.width = "98%", fig.cap = "a.) Empirical coverage of the surrogate (orange) and ensemble (green) forecasts at the 90\\%, 60\\%, and 30\\% prediction intervals stratified by forecast horizon. Ideally, a well-calibrated forecast should have empirical coverage for a given prediction interval that equals the nominal level of the interval (i.e., 30\\%, 60\\% and 90\\%, respectively). b.) Empirical coverage by quantile for both the surrogate and ensemble forecasts. A well-calibrated forecast should have empirical quantiles that match the theoretical ones. The green area of this figure corresponds to conservative forecasts. c.) Median relative weighted interval score by quantile and forecast horizon for the surrogate forecast compared to the ensemble forecast. d.) Bias of the ensemble and surrogate forecasts stratified by horizon."}
 p <- (
   (
     (
-      plot_coverage_range(coverage, ranges)
+      plot_coverage_range(coverage, ranges) +
+       guides(
+        fill = guide_none(), point_color = guide_none(), point = guide_none()
+       )
     )
   ) | (
     plot_coverage_quantiles(scores) + (
@@ -681,7 +684,7 @@ p <- (
   plot_annotation(tag_levels = "a") &
   theme(
     legend.position = "bottom", legend.margin = margin(),
-    legend.justification = "centre", legend.direction = "vertical"
+    legend.justification = "centre", legend.box = "vertical"
   )
 suppressWarnings(print(p))
 ```
@@ -782,9 +785,6 @@ However, this work is limited by the lack of large-scale forecast ensembling pro
 We conclude that our simplified forecast model may have captured some of the dynamics of the hub ensemble but that more work needs to be done to understand the epidemiological model that represents its behaviour and whether or not this is the optimal choice for stakeholders' requirements.
 We also conclude that our findings may be largely driven by the choice of evaluation measure used by the Forecast Hub. While this measure has desirable mathematical properties and is routinely used in a similar form e.g., in weather forecasting, it is subject to debate whether it appropriately reflects forecast users' requirements and perceptions as to what makes a good forecast.
 Our work is useful for forecast users to understand the inherent assumptions of the forecasts they are making use of and to researchers thinking about how to develop forecasts that perform similarly to current multi-model and multi-team forecast ensembles that are trusted by stakeholders.
-
-
-
 
 # Additional Information and Declarations {-}
 
